--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,40 @@
 services:
-    database:
-        image: mysql:latest
-        environment:
-           -MYSQL_ALLOW_EMPTY_PASSWORD='YES'
-           -MYSQL_DATABASE=db_springboot_backend
+  database:
+    container_name: postgres_db
+    image: postgres:latest
+    restart: always
+    environment:
+      - POSTGRES_DB=mydatabase
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=admin123
+    ports:
+      - 5432:5432
+  backend:
+    container_name: app_api
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    restart: always
+    ports:
+      - 5000:8080
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://database:5432/mydatabase
+      - SPRING_DATASOURCE_USERNAME=admin
+      - SPRING_DATASOURCE_PASSWORD=admin123
 
-        ports:
-            - "5432:5432"
+  frontend:
+    container_name: app_web
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    restart: always
+    ports:
+      - 80:80
 
-    backend:
-        build:
-            context: ./backend
-            dockerfile: Dockerfile
-        ports:
-            - "8080:8080"
-        environment:
-             - SPRING_DATASOURCE_ULR=jdbc:mysql://clientes_db:3306/db_springboot_backend
-             - SPRING_DATASOURCE_USERNAME=root
-             - SPRING_DATASOURCE_PASSWORD=
-
-        depends_on:
-            - database
-
-    frontend:
-        build:
-            context: ./frontend
-            dockerfile: Dockerfile
-        ports:
-            - "80:80"
-        depends_on:
-            - backend
-
-    nginx:
-        image: nginx:latest
-        volumes:
-            - ./Nginx/nginx.conf:/etc/nginx/nginx.conf
-        ports:
-            - "85:80"
+  nginx:
+    image: nginx:latest
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./frontend/clientes-app:/usr/share/nginx/html
+    ports:
+      - 81:80
